[gd_scene load_steps=5 format=3 uid="uid://ddhbeb8tvaxcu"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_v42no"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1s3e"]
bg_color = Color(0.254902, 0.615686, 0.968627, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_d3xa6"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_348ja"]
font_size = 48

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v42no")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -389.0
offset_top = -389.0
offset_right = 389.0
offset_bottom = 389.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m1s3e")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 45.0
offset_right = 138.0
offset_bottom = 115.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_d3xa6")

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -96.0
offset_right = 138.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
text = "HI-SCORE: 0"
label_settings = SubResource("LabelSettings_348ja")
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -27.0
offset_right = 138.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_348ja")
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -270.0
offset_right = 190.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "RETRY"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -159.0
offset_right = 109.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
text = "QUIT"

[connection signal="pressed" from="Panel/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_button_pressed"]
